--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "bower": "^1.8.4"
+    "angular-sanitize": "^1.7.5",
+    "angular-translate": "^2.18.1",
+    "angular-translate-interpolation-messageformat": "^2.18.1",
+    "angular-translate-loader-partial": "^2.18.1",
+    "bower": "^1.8.4",
+    "i18n": "^0.8.3",
+    "messageformat": "^2.0.4"
   }
 }
